1999-02-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (show): Use gtk_grab_add/remove.
	(finish_realize): Renamed and modified from handle_configure_event
	for the "realize" signal.  Update all refs too.
	(about_dialog): Add "realize" connection and remove
	"configure_event".

	* main.cc (parse_gtkrc) [PKGDATADIR]: Add gtk_rc_parse for default
	gtkrc file.

	* Makefile.am (INCLUDES): Add -DPKGDATADIR=....

	* gettextize.
	* po/POTFILES.in: New file.
	* po/ja.po: New file.
	* configure.in (ALL_LINGUAS): Add ja.

	* main.cc (parse_gtkrcs): New function.
	(main): Initialize NLS.
	(main): Use parse_gtkrcs.

1999-02-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc: Add #include <libintl.h>.
	Add using namespace std.
	(_): Defined.
	(glclock): Use the _ macro for message text.

	* about.cc: Add #include <libintl.h>.
	(_): Defined to use gettext.

	* main.cc: Add #include <libintl.h>.
	(_): Defined.

	* Makefile.am (INCLUDES): Add -DLOCALEDIR=....

1999-02-05  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (data_DATA): Added.

1999-02-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Updated.

	* NEWS: Updated.

	* Makefile.am (INCLUDES): Remove -DSESSION.

	* about.cc: Remove #define ENABLE_TRANSIENT_FOR_HINT.

	* configure.in: Add options: --disable-wm-command and
	--disable-wm-transient-for.
	* acconfig.h: Add entries for SESSION and
	ENABLE_TRANSIENT_FOR_HINT.

	* about.cc (about_dialog): Use asprintf/sprintf for gettext
	migration later.
	(populate): Make the version string using asprintf/sprintf.

1999-02-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 1.2.1.

	* NEWS: Updated.

1999-02-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (about_dialog): Set the window title.
	(about_dialog): Position the window to center.
	(populate): Set the default to the OK button.
	(about_dialog): Construct the title string on the fly.
	(_): Defined for later gettext migration.